# brpmatch

./: .gitignore  DOCUMENTATION_STYLE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN.md  PLAN_DETAILED.md  PLAN_HIGH_LEVEL.md  README.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  pipeline.R  pipeline.py  pipeline.sql  pyproject.toml
brpmatch/: __init__.py  features.py  loveplot.py  matching.py  stratify.py  summary.py  utils.py  warnings_util.py
example/: example.py  lalonde_1to1_euclidean_matched.csv  lalonde_1to1_mahalanobis_matched.csv  lalonde_1to3_no_replacement_euclidean_matched.csv  lalonde_1to3_no_replacement_mahalanobis_matched.csv  lalonde_1to3_with_replacement_euclidean_matched.csv  lalonde_1to3_with_replacement_mahalanobis_matched.csv  lalonde_euclidean_matched.csv  lalonde_mahalanobis_matched.csv  lalonde_matched.csv  synthetic_euclidean_matched.csv  synthetic_mahalanobis_matched.csv  utils.py
example/1to1_euclidean/: analysis.csv  bucket_stats.csv  example.py  matched.csv  pairs.csv  stratified.csv  summary.csv  units.csv
example/1to1_mahalanobis/: analysis.csv  bucket_stats.csv  example.py  matched.csv  pairs.csv  stratified.csv  summary.csv  units.csv
example/1to3_no_replacement_euclidean/: analysis.csv  bucket_stats.csv  example.py  matched.csv  pairs.csv  stratified.csv  summary.csv  units.csv
example/1to3_no_replacement_mahalanobis/: analysis.csv  bucket_stats.csv  example.py  matched.csv  pairs.csv  stratified.csv  summary.csv  units.csv
example/1to3_with_replacement_euclidean/: analysis.csv  bucket_stats.csv  example.py  matched.csv  pairs.csv  stratified.csv  summary.csv  units.csv
example/1to3_with_replacement_mahalanobis/: analysis.csv  bucket_stats.csv  example.py  matched.csv  pairs.csv  stratified.csv  summary.csv  units.csv
scripts/: example.py
tests/: conftest.py  test_features.py  test_loveplot.py  test_matching.py  test_summary.py
tests/data/: lalonde.csv
