[project]
name = "brpmatch"
version = "0.1.0"
description = "Large-scale distance-based cohort matching on Apache Spark"
authors = [
    {name = "Shawn T O'Neil shawn@tislab.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
