[project]
name = "brpmatch"
version = "1.0.0"
description = "Large-scale distance-based cohort matching on Apache Spark"
authors = [
    {name = "Shawn T O'Neil shawn@tislab.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5,<4.0)",
    "pyarrow>=15.0",
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "setuptools (>=80.10.1,<81.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=0.10",
    "twine>=4.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
