[tool.poetry]
name = "brpmatch"
version = "1.0.0"
description = "Large-scale distance-based cohort matching on Apache Spark"
authors = ["Shawn T O'Neil <shawn@tislab.org>", "Evan French <etfrench@vcu.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/oneilsh/brpmatch"
repository = "https://github.com/oneilsh/brpmatch"
documentation = "https://github.com/oneilsh/brpmatch#readme"
keywords = ["matching", "apache-spark", "cohort-matching", "lsh", "nearest-neighbor"]
  classifiers = [
      "Development Status :: 4 - Beta",
      "Intended Audience :: Science/Research",
      "Intended Audience :: Healthcare Industry",
      "Topic :: Scientific/Engineering",
      "Topic :: Scientific/Engineering :: Information Analysis",
      "Topic :: Scientific/Engineering :: Medical Science Apps.",
      "License :: OSI Approved :: MIT License",
      "Programming Language :: Python :: 3",
      "Programming Language :: Python :: 3 :: Only",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
  ]

[tool.poetry.dependencies]
python = ">=3.10"
pyspark = ">=3.5,<4.0"
pyarrow = ">=15.0"
numpy = ">=1.21"
scipy = ">=1.7"
scikit-learn = ">=1.0"
pandas = ">=1.3"
matplotlib = ">=3.5"
setuptools = ">=80.10.1,<81.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
build = ">=0.10"
twine = ">=4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    # Suppress PySpark's internal socket warnings (cleaned up on session stop)
    "ignore::ResourceWarning",
    # Suppress PySpark's distutils deprecation warnings (external dependency issue)
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
]
